Planner Activity에서 Planner Note로 액티비티 변환될떄 인텐트 데이터값으로 년월일 String이나 데이터도 함께 전달하는 중이였음 - PlannerNote에서 파일입출력으로 해당파일이름을 해당 데이터로하기 위함.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,13 @@
             ></activity>
 
         <activity
-            android:name=".StatisticsActivity"
-            android:label="Statistics"
+        android:name=".StatisticsActivity"
+        android:label="Statistics"
+        ></activity>
+
+        <activity
+            android:name=".PlannerNote"
+            android:label="Note"
             ></activity>
 
     </application>
