--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".PlannerNote"
             android:label="Note"
             ></activity>
+        <activity
+            android:name=".PlannerDetailActivity"
+            android:label="Note"
+            ></activity>
 
     </application>
 
