--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             ></activity>
         <activity
             android:name=".PlannerDetailActivity"
-            android:label="Note"
+            android:label="Detail"
             ></activity>
 
     </application>
