수정 액티비티 이동만가능함.. 아직덜함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity
             android:name=".PlannerDetailActivity"
             android:label="Detail" />
+        <activity
+            android:name=".PlannerModifyActivity"
+            android:label="Detail" />
     </application>
 
 </manifest>
