--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.afinal">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_main"
@@ -9,12 +10,11 @@
         android:roundIcon="@mipmap/ic_main_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver
-            android:name=".MyReceiver"
-            android:enabled="true"
-            android:exported="true"></receiver>
 
-        <activity android:name=".LoadingActivity"
+        <service android:name=".TimeService"></service>
+
+        <activity
+            android:name=".LoadingActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
