--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+
+    //Material IO
+    api 'com.google.android.material:material:1.1.0-alpha06'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
 
